--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -254,12 +254,12 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 1,
+"breakpoints": PackedInt32Array(51, 66),
+"column": 45,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 44.0,
+"row": 66,
+"scroll_position": 43.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -269,10 +269,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(18),
-"column": 0,
+"column": 57,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
