--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -3,7 +3,7 @@
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
-dock_4_selected_tab_idx=0
+dock_4_selected_tab_idx=1
 dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
@@ -20,7 +20,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/UI/upgrade_screen.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/UI/ability_upgrade_card.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/manager/", "res://scenes/game_objects/", "res://scenes/game_objects/wizard_enemy/", "res://scenes/game_objects/experience_vial/", "res://scenes/game_objects/basic_enemy/", "res://scenes/component/", "res://scenes/ability/", "res://scenes/ability/axe_ability_controller/", "res://resources/", "res://resources/theme/", "res://assets/", "res://assets/ui/", "res://assets/enviornment/")
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
@@ -28,17 +28,17 @@ dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/component/vial_drop_component.tscn", "res://scenes/game_objects/experience_vial/experience_vial.tscn", "res://scenes/UI/arena_time_ui.tscn", "res://scenes/UI/floating_text.tscn", "res://scenes/game_objects/basic_enemy/basic_enemy.tscn", "res://scenes/game_objects/wizard_enemy/wizard_enemy.tscn", "res://scenes/UI/ability_upgrade_card.tscn", "res://scenes/manager/upgrade_manager.tscn", "res://scenes/UI/upgrade_screen.tscn")
-current_scene="res://scenes/UI/upgrade_screen.tscn"
+open_scenes=PackedStringArray("res://scenes/component/vial_drop_component.tscn", "res://scenes/game_objects/experience_vial/experience_vial.tscn", "res://scenes/UI/arena_time_ui.tscn", "res://scenes/UI/floating_text.tscn", "res://scenes/game_objects/basic_enemy/basic_enemy.tscn", "res://scenes/game_objects/wizard_enemy/wizard_enemy.tscn", "res://scenes/UI/upgrade_screen.tscn", "res://scenes/UI/ability_upgrade_card.tscn")
+current_scene="res://scenes/game_objects/wizard_enemy/wizard_enemy.tscn"
 center_split_offset=-949
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
 open_scripts=["res://resources/upgrades/ability.gd", "res://resources/upgrades/ability_upgrade.gd", "res://scenes/UI/ability_upgrade_card.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/UI/arena_time_ui.gd", "res://scenes/ability/axe_ability/axe_ability.gd", "res://scenes/ability/axe_ability_controller/axe_ability_controller.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/component/death_component.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/game_objects/experience_vial/experience_vial.gd", "res://scenes/UI/floating_text.gd", "res://scenes/auto_load/game_events.gd", "res://scenes/component/health_component.gd", "res://scenes/component/hitbox_component.gd", "res://scenes/component/hit_flash_component.gd", "res://scenes/component/hurt_box_component.gd", "res://scenes/main/main.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/sword_ability/sword_ability.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/upgrade_manager.gd", "res://scenes/UI/upgrade_screen.gd", "res://scenes/component/velocity_component.gd", "res://scenes/component/vial_drop_component.gd", "res://scripts/weighted_table.gd", "res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"]
-selected_script="res://scenes/UI/upgrade_screen.gd"
+selected_script="res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"
 open_help=[]
 script_split_offset=306
 list_split_offset=0
