--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,16 +20,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/UI/end_screen.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/manager/", "res://scenes/game_objects/", "res://scenes/game_objects/wizard_enemy/", "res://scenes/game_objects/experience_vial/", "res://scenes/game_objects/basic_enemy/", "res://scenes/component/", "res://scenes/ability/", "res://scenes/ability/axe_ability_controller/", "res://resources/", "res://resources/theme/", "res://assets/", "res://assets/ui/", "res://assets/enviornment/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/UI/upgrade_screen.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/manager/", "res://resources/", "res://resources/upgrades/")
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
 dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/UI/experience_bar.tscn", "res://scenes/game_objects/player/player.tscn", "res://scenes/component/health_component.tscn", "res://scenes/UI/end_screen.tscn")
-current_scene="res://scenes/UI/end_screen.tscn"
+open_scenes=PackedStringArray("res://scenes/UI/experience_bar.tscn", "res://scenes/game_objects/player/player.tscn", "res://scenes/component/health_component.tscn", "res://scenes/UI/end_screen.tscn", "res://scenes/UI/upgrade_screen.tscn")
+current_scene="res://scenes/UI/upgrade_screen.tscn"
 center_split_offset=-949
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/UI/end_screen.gd", "res://scenes/UI/experience_bar.gd", "res://scenes/component/health_component.gd", "res://scenes/game_objects/player/player.gd"]
-selected_script="res://scenes/UI/end_screen.gd"
+open_scripts=["res://scenes/UI/end_screen.gd", "res://scenes/UI/experience_bar.gd", "res://scenes/component/health_component.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/UI/upgrade_screen.gd"]
+selected_script="res://scenes/UI/upgrade_screen.gd"
 open_help=[]
 script_split_offset=306
 list_split_offset=0
