--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -64,7 +64,8 @@ show_scripts_panel=true
 
 [color_picker]
 
-recent_presets=PackedColorArray(0.14902, 0.168627, 0.266667, 1, 0.607843, 0.298039, 0.639216, 1, 0.607843, 0.298039, 0.639216, 0.352941, 1, 1, 1, 0.0196078, 1, 1, 1, 0, 0, 0.6, 0.858824, 1, 0.8, 0.8, 0.8, 0.00784314, 0.8, 0.8, 0.8, 0, 0.458824, 0.890196, 1, 1)
+recent_presets=PackedColorArray(1, 1, 1, 0.0196078, 1, 1, 1, 0, 0.8, 0.8, 0.8, 0.00784314, 0.8, 0.8, 0.8, 0, 0.458824, 0.890196, 1, 1, 0, 0.6, 0.858824, 1, 0.14902, 0.168627, 0.266667, 1, 0.741176, 0.423529, 0.290196, 1, 0.247059, 0.14902, 0.192157, 1)
+presets=PackedColorArray(0.247059, 0.14902, 0.192157, 1)
 
 [shader_setup]
 
