--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,16 +20,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://resources/upgrades/player_speed.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/game_objects/", "res://scenes/game_objects/player/", "res://scenes/component/", "res://resources/", "res://resources/upgrades/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/game_objects/experience_vial/experience_vial.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/manager/", "res://scenes/game_objects/", "res://scenes/game_objects/experience_vial/")
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
 dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main/main.tscn", "res://scenes/game_objects/basic_enemy/basic_enemy.tscn", "res://scenes/component/random_stream_player_2d_component.tscn", "res://scenes/component/death_component.tscn", "res://scenes/game_objects/wizard_enemy/wizard_enemy.tscn", "res://scenes/game_objects/player/player.tscn")
-current_scene="res://scenes/game_objects/player/player.tscn"
+open_scenes=PackedStringArray("res://scenes/main/main.tscn", "res://scenes/game_objects/basic_enemy/basic_enemy.tscn", "res://scenes/component/random_stream_player_2d_component.tscn", "res://scenes/component/death_component.tscn", "res://scenes/game_objects/wizard_enemy/wizard_enemy.tscn", "res://scenes/game_objects/player/player.tscn", "res://scenes/game_objects/experience_vial/experience_vial.tscn")
+current_scene="res://scenes/game_objects/experience_vial/experience_vial.tscn"
 center_split_offset=-949
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/component/death_component.gd", "res://scenes/auto_load/game_events.gd", "res://scenes/component/hurt_box_component.gd", "res://scenes/main/main.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/component/random_stream_player_2d_component.gd", "res://scenes/UI/vignette.gd", "res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"]
-selected_script="res://scenes/game_objects/player/player.gd"
+open_scripts=["res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/component/death_component.gd", "res://scenes/game_objects/experience_vial/experience_vial.gd", "res://scenes/auto_load/game_events.gd", "res://scenes/component/hurt_box_component.gd", "res://scenes/main/main.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/component/random_stream_player_2d_component.gd", "res://scenes/UI/vignette.gd", "res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"]
+selected_script="res://scenes/game_objects/experience_vial/experience_vial.gd"
 open_help=[]
 script_split_offset=306
 list_split_offset=0
