--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,16 +20,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/audio/Imposter_4.mp3")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/game_objects/", "res://scenes/game_objects/wizard_enemy/", "res://scenes/game_objects/experience_vial/", "res://scenes/game_objects/basic_enemy/", "res://resources/", "res://resources/upgrades/", "res://assets/", "res://assets/audio/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/main/main.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/main/")
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
 dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main/main.tscn", "res://scenes/game_objects/basic_enemy/basic_enemy.tscn", "res://scenes/component/death_component.tscn", "res://scenes/game_objects/wizard_enemy/wizard_enemy.tscn", "res://scenes/game_objects/player/player.tscn", "res://scenes/game_objects/experience_vial/experience_vial.tscn", "res://scenes/UI/sound_button.tscn", "res://scenes/component/random_stream_player_component.tscn", "res://scenes/UI/end_screen.tscn", "res://scenes/UI/ability_upgrade_card.tscn", "res://scenes/manager/arena_time_manager.tscn", "res://scenes/auto_load/music_player.tscn")
-current_scene="res://scenes/auto_load/music_player.tscn"
+open_scenes=PackedStringArray("res://scenes/main/main.tscn", "res://scenes/game_objects/player/player.tscn", "res://scenes/game_objects/experience_vial/experience_vial.tscn", "res://scenes/UI/sound_button.tscn", "res://scenes/component/random_stream_player_component.tscn", "res://scenes/UI/end_screen.tscn", "res://scenes/UI/ability_upgrade_card.tscn", "res://scenes/UI/main_menu.tscn")
+current_scene="res://scenes/UI/main_menu.tscn"
 center_split_offset=-949
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/UI/ability_upgrade_card.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/component/death_component.gd", "res://scenes/UI/end_screen.gd", "res://scenes/game_objects/experience_vial/experience_vial.gd", "res://scenes/auto_load/game_events.gd", "res://scenes/component/hurt_box_component.gd", "res://scenes/main/main.gd", "res://scenes/auto_load/music_player.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/component/random_stream_player_2d_component.gd", "res://scenes/component/random_stream_player_component.gd", "res://scenes/UI/sound_button.gd", "res://scenes/UI/vignette.gd", "res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"]
-selected_script="res://scenes/auto_load/music_player.gd"
+open_scripts=["res://scenes/UI/ability_upgrade_card.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/ability/axe_ability/axe_ability.gd", "res://scenes/ability/axe_ability_controller/axe_ability_controller.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/component/death_component.gd", "res://scenes/UI/end_screen.gd", "res://scenes/game_objects/experience_vial/experience_vial.gd", "res://scenes/auto_load/game_events.gd", "res://scenes/component/hurt_box_component.gd", "res://scenes/main/main.gd", "res://scenes/UI/main_menu.gd", "res://scenes/auto_load/music_player.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/component/random_stream_player_2d_component.gd", "res://scenes/component/random_stream_player_component.gd", "res://scenes/UI/sound_button.gd", "res://scenes/ability/sword_ability/sword_ability.gd", "res://scenes/component/velocity_component.gd", "res://scenes/UI/vignette.gd", "res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"]
+selected_script="res://scenes/UI/main_menu.gd"
 open_help=[]
 script_split_offset=306
 list_split_offset=0
